# aopi

./: .flake8  .pre-commit-config.yaml  README.rst  main.py  pyproject.toml
.github/workflows/: pre_commit.yml  release.yml
aopi/: application.py  arg_parser.py  main.py  settings.py
aopi-frontend/: nuxt.config.js  package.json
aopi-frontend/components/: package_info.vue  plugin_checker.vue  vue_rst.vue
aopi-frontend/pages/: index.vue  login.vue  no_plugins.vue  packages.vue
aopi-frontend/pages/admin/: groups.vue  index.vue  packages.vue  users.vue
aopi-frontend/plugins/: axios.client.js
aopi-frontend/utils/: termynal.js
aopi/api/: __init__.py  packages.py
aopi/api/simple/: __init__.py  logic.py  models.py  routes.py
aopi/application/: main.py  plugin_manager.py  startup.py  view.py
aopi/models/: __init__.py  classifiers.py  dict_proxy.py  dist_info.py  meta.py  package.py  package_version.py  roles.py  user.py  user_roles.py  users.py
aopi/routes/: __init__.py
aopi/routes/api/: __init__.py  routes.py
aopi/routes/api/auth/: __init__.py  dependencies.py  routes.py  schema.py
aopi/routes/ui/: __init__.py  routes.py
aopi/runners/: asyncio_runner.py  gunicorn_runner.py  uvicorn_runner.py
aopi/templates/: __init__.py  index.jinja2  package_versions.jinja2
aopi/templates/main/: index.jinja2
aopi/templates/simple/: index.jinja2  package_versions.jinja2
aopi/ui/: __init__.py
aopi/ui/templates/: error_page.jinja2
aopi/ui/templates/main/: index.jinja2  login.jinja2
aopi/utils/: logging.py  package_explorer.py  pydantic_form.py
frontend/: nuxt.config.js  package.json
frontend/assets/: variables.scss
frontend/components/: header.vue
frontend/layouts/: default.vue
frontend/pages/: index.vue  login.vue
frontend/plugins/: backend_settings.js
tests/: test_aopi.py
