[tool.poetry]
name = "aopi"
version = "0.1.3"
description = ""
authors = ["Pavel Kirilin <win10@list.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
fuzzy-match = "^0.0.1"
aiohttp = "^3.7.3"
gunicorn = { version = "^20.0.4", optional = true }
uvloop = { version = "^0.14.0", optional = true }
aiohttp-jinja2 = "^1.4.2"
pydantic = "^1.7.3"
aiofile = "^3.3.3"
loguru = "^0.5.3"
aiohttp-pydantic = "^1.6.1"
orm = "^0.1.5"
aiosqlite = "^0.16.0"
tabulate = "^0.8.7"
ujson = "^4.0.1"
natsort = "^7.1.0"
argparse-utils = "^1.3.0"
asyncpg = { version = "^0.21.0", optional = true }
psycopg2 = {version = "^2.8.6", optional = true}
aiomysql = {version = "^0.0.21", optional = true}
mysqlclient = {version = "^2.0.2", optional = true}
pkginfo = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1"

[tool.poetry.extras]
unix = ["gunicorn", "uvloop"]
postgre = ["asyncpg", "psycopg2"]
mysql = ["aiomysql", "mysqlclient"]

[tool.poetry.scripts]
aopi = "aopi.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
