[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aopi"
version = "0.1.3"
description = ""
authors = ["Pavel Kirilin <win10@list.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
orm = "^0.1.5"
ujson = "^4.0.1"
loguru = "^0.5.3"
Jinja2 = "^2.11.2"
natsort = "^7.1.0"
pkginfo = "^1.6.1"
aiofile = "^3.3.3"
fastapi = "^0.62.0"
pydantic = "^1.7.3"
tabulate = "^0.8.7"
uvicorn = "^0.13.1"
aiosqlite = "^0.16.0"
argparse-utils = "^1.3.0"
uvloop = { version = "^0.14.0", optional = true }
asyncpg = { version = "^0.21.0", optional = true }
psycopg2 = { version = "^2.8.6", optional = true }
aiomysql = { version = "^0.0.21", optional = true }
gunicorn = { version = "^20.0.4", optional = true }
mysqlclient = { version = "^2.0.2", optional = true }
python-multipart = "^0.0.5"
httptools = "^0.1.1"
aiofiles = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1"

[tool.poetry.extras]
unix = ["gunicorn", "uvloop"]
postgre = ["asyncpg", "psycopg2"]
mysql = ["aiomysql", "mysqlclient"]

[tool.poetry.scripts]
aopi = "aopi.main:main"
